Validation W3C page vivreici

--- a/acceuil.html
+++ b/acceuil.html
@@ -38,9 +38,9 @@
                     </li>
                     <li class="nav-item">
                         <a href="municipalite.html" class="nav-link lien-header"> <i
-                                class="bi bi-bank bi d-block mx-auto mb-1 fs-2 text-center" width="24" height="24"
+                                class="bi bi-bank bi d-block mx-auto mb-1 fs-2 text-center" 
                                 aria-hidden="true">
-                                <use xlink:href="municipalite.html"></use>
+                              
                             </i>Municipalité</a>
                     </li>
                     <li class="nav-item">
@@ -75,7 +75,7 @@
             <div class="offcanvas-body">
                 <ul class="nav flex-column gap-3">
                     <li class="nav-item">
-                        <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis" class="nav-link text-dark ">
+                        <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis" class="nav-link  ">
                             <i class="bi bi-tree-fill bi  mx-auto mb-1 fs-2 text-center " width="24" height="24"
                                 aria-hidden="true">
 
@@ -83,7 +83,7 @@
                             </i>Socioculturelle</a>
                     </li>
                     <li class="nav-item">
-                        <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis" class="nav-link text-dark ">
+                        <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis" class="nav-link ">
                             <i class="bi bi-houses-fill bi  mx-auto mb-1 fs-2 text-center " width="24" height="24"
                                 aria-hidden="true">
 
@@ -91,7 +91,7 @@
                             </i>Citoyens</a>
                     </li>
                     <li class="nav-item">
-                        <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis" class="nav-link text-dark ">
+                        <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis" class="nav-link ">
                             <i class="bi bi-bank bi  mx-auto mb-1 fs-2 text-center " width="24" height="24"
                                 aria-hidden="true">
 
@@ -99,7 +99,7 @@
                             </i>Municipalités</a>
                     </li>
                     <li class="nav-item">
-                        <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis" class="nav-link text-dark ">
+                        <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis" class="nav-link ">
                             <i class="bi bi-phone bi  mx-auto mb-1 fs-2 text-center " width="24" height="24"
                                 aria-hidden="true">
                             </i>Nous joindre</a>
@@ -141,7 +141,7 @@
                 <!-- Carousel #1-->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="img-fluid w-100" src="Daveluyville-Images/hiver-davel.png" alt="">
+                        <h3 class="img-fluid w-100" src="Daveluyville-Images/hiver-davel.png" alt="Hiver-sapin-parc">
                         <svg aria-hidden="true" class="bd-placeholder-img" height="100%"
                             preserveAspectRatio="xMidYMid slice" width="100%" xmlns="http://www.w3.org/2000/svg">
                             <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
@@ -162,7 +162,7 @@
                     <!-- Carousel #2-->
                     <div class="carousel-item">
 
-                        <img class="img-fluid w-100" src="Daveluyville-Images/Hiver-sapin-parc.jpg" alt="">
+                        <img class="img-fluid w-100" src="Daveluyville-Images/Hiver-sapin-parc.jpg" alt="Hiver-sapin-parc">
                         <svg aria-hidden="true" class="bd-placeholder-img" height="100%"
                             preserveAspectRatio="xMidYMid slice" width="100%" xmlns="http://www.w3.org/2000/svg">
                             <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
@@ -180,7 +180,7 @@
                     </div>
                     <!-- Carousel #3-->
                     <div class="carousel-item">
-                        <img class="img-fluid w-100" src="Daveluyville-Images/daveluyville_1.jpg" alt="">
+                        <img class="img-fluid w-100" src="Daveluyville-Images/daveluyville_1.jpg" alt=" vue-aérienne-de-la-ville">
                         <svg aria-hidden="true" class="bd-placeholder-img " height="100%"
                             preserveAspectRatio="xMidYMid slice" width="100%" xmlns="http://www.w3.org/2000/svg">
                             <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
@@ -229,7 +229,7 @@
                     <p class="lead text-center text-md-center">
                         La ville souhaite un joyeux temps des fêtes à tous les citoyens </p>
                     <div class="card mb-1" style="width: 25rem;">
-                        <div class="card-body">
+                        <div class="card-body bg-body-loisirs">
                             <h5 class="card-title">Journal Le causeur</h5>
                             <h6 class="card-subtitle mb-2 text-body-secondary">Décembre 2025</h6>
                             <a href="#" class="card-link">Consulter</a>
@@ -237,10 +237,10 @@
                         </div>
                     </div>
                     <div class="card" style="width: 25rem;">
-                        <div class="card-body">
+                        <div class="card-body bg-body-hotel-de-ville">
                             <h5 class="card-title">Infolettre</h5>
-                            <h6 class="card-subtitle mb-2 text-body-secondary">Inscrivez-vous</h6>
-                            <p class="card-text">pour rester informé.</p>
+                            <h6 class="card-subtitle mb-2 text-body-secondary">Inscrivez-vous pour rester inform.é!</h6>
+
                             <a href="#" class="card-link">S'inscrire</a>
                             <a href="#" class="card-link">Consulter l'infolettre</a>
                         </div>
