--- a/municipalite.html
+++ b/municipalite.html
@@ -15,7 +15,7 @@
  
 <body>
       <header>
-        <div class="border-bottom header-bg">
+        <div class="border-bottom bg-municipalite">
             <div class=" d-flex align-items-center py-3">
 
                 <a href="acceuil.html" class="me-auto">
@@ -40,7 +40,6 @@
                         <a href="municipalite.html" class="nav-link lien-header"> <i
                                 class="bi bi-bank bi d-block mx-auto mb-1 fs-2 text-center" width="24" height="24"
                                 aria-hidden="true">
-                                <use xlink:href="municipalite.html"></use>
                             </i>Municipalité</a>
                     </li>
                     <li class="nav-item">
@@ -144,7 +143,7 @@
                         <!-- INFOS 1-->
                         <div class="col-lg-4 align-items-center text-center">
                             
-                             <img src="Daveluyville-Images/salle-conseil.jfif" alt="" aria-label="Placeholder" class="bd-placeholder-img rounded-circle" height="140"
+                             <img src="Daveluyville-Images/salle-conseil.jfif" alt="salle-du-conseil" aria-label="Placeholder" class="bd-placeholder-img rounded-circle" height="140"
                                 preserveAspectRatio="xMidYMid slice" role="img" width="140"
                                 xmlns="http://www.w3.org/2000/svg">
                                
@@ -184,7 +183,7 @@
                         </img>
                             <h3 class="fw-normal">Projet et Règlements</h3>
                             <p>
-                                Dans cette section vous aurez accès aux différents projets <br> et règlements
+                                Cette section donne accès aux différents projets <br> et règlements
                                 municipaux, permis et formulaires.
                             </p>
                             <p>
@@ -199,8 +198,8 @@
         <hr class=" m-5">
         <!-- Section  Équipe -->
         <section class="container mt-4">
-            <div class="row align-items-center">
-                <h3 class="display-6 fst-italic ">
+            <div class="row align-items-center borde">
+                <h3 class="display-6 fst-italic mb-5 ">
                     Votre équipe municipale
 
                     <a class="btn btn-secondary" href="#">En savoir plus</a>
@@ -223,7 +222,7 @@
                 <div class="col-lg-8">
                     <div class=" row g-3 justify-content-center">
                         <div class="col-4">
-                            <img src="Daveluyville-Images/équipe-nadialeclerc.jpg" alt=""
+                            <img src="Daveluyville-Images/équipe-nadialeclerc.jpg" alt="nadia-leclerc"
                                 class=" img-fluid rounded-circle" height="180" width="180">
                             <h3 class="fw-normal">Nadia Leclerc</h3>
                             <p>
@@ -231,7 +230,7 @@
                             </p>
                         </div>
                         <div class="col-4">
-                            <img src="Daveluyville-Images/équipe-sébastienbilodeau.jpg" alt=""
+                            <img src="Daveluyville-Images/équipe-sébastienbilodeau.jpg" alt="sébastien-bilodeau"
                                 class=" img-fluid rounded-circle" height="180" width="180">
                             <h3 class="fw-normal">Sébastien Bilodeau</h3>
                             <p>
@@ -239,7 +238,7 @@
                             </p>
                         </div>
                         <div class="col-4">
-                            <img src="Daveluyville-Images/équipe-valérieloiselle.jpg" alt=""
+                            <img src="Daveluyville-Images/équipe-valérieloiselle.jpg" alt="valérie-loiselle"
                                 class=" img-fluid rounded-circle" height="180" width="180">
                             <h3 class="fw-normal">Valérie Loiselle</h3>
                             <p>
@@ -247,7 +246,7 @@
                             </p>
                         </div>
                         <div class="col-4">
-                            <img src="Daveluyville-Images/équipe-alainraymond.jpg" alt=""
+                            <img src="Daveluyville-Images/équipe-alainraymond.jpg" alt="alain-raymond"
                                 class=" img-fluid rounded-circle" height="180" width="180">
                             <h3 class="fw-normal">Alain Raymond</h3>
                             <p>
@@ -255,7 +254,7 @@
                             </p>
                         </div>
                         <div class="col-4">
-                            <img src="Daveluyville-Images/équipe-caroleanneprovencher.jpg" alt=""
+                            <img src="Daveluyville-Images/équipe-caroleanneprovencher.jpg" alt="carolannne-provencher"
                                 class=" img-fluid rounded-circle" height="180" width="180">
                             <h3 class="fw-normal">Carol-Anne Provencher</h3>
                             <p>
@@ -263,7 +262,7 @@
                             </p>
                         </div>
                         <div class="col-4">
-                            <img src="Daveluyville-Images/équipe-christinegentes.jpg" alt=""
+                            <img src="Daveluyville-Images/équipe-christinegentes.jpg" alt="christine-gentes"
                                 class=" img-fluid rounded-circle" height="180" width="180">
                             <h3 class="fw-normal">Christine Gentes</h3>
                             <p>
@@ -302,7 +301,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-                    <img class="rounded-lg-3" src="Daveluyville-Images/gare-1920-daveluyville.jpg" alt=""
+                    <img class="rounded-lg-3" src="Daveluyville-Images/gare-1920-daveluyville.jpg" alt="gare-en-1920"
                         width="100%" />
                 </div>
             </div>
