--- a/vivreici.html
+++ b/vivreici.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <div class="border-bottom header-bg">
+        <div class="border-bottom bg-ville">
             <div class=" d-flex align-items-center py-3">
 
                 <a href="acceuil.html" class="me-auto">
@@ -25,28 +25,24 @@
                 <ul class="nav d-none d-lg-flex align-items-center gap-3">
                     <li class="nav-item">
                         <a href="loisirs.html" class="nav-link lien-header"> <i
-                                class="bi bi-tree-fill bi d-block mx-auto mb-1 fs-2 text-center " width="24" height="24"
-                                aria-hidden="true">
+                                class="bi bi-tree-fill bi d-block mx-auto mb-1 fs-2 text-center " aria-hidden="true">
                             </i>Socioculturelle</a>
                     </li>
                     <li class="nav-item">
                         <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis" class="nav-link lien-header">
-                            <i class="bi bi-houses-fill bi d-block mx-auto mb-1 fs-2 text-center" width="24" height="24"
-                                aria-hidden="true">
+                            <i class="bi bi-houses-fill bi d-block mx-auto mb-1 fs-2 text-center" aria-hidden="true">
 
                             </i>Citoyens</a>
                     </li>
                     <li class="nav-item">
                         <a href="municipalite.html" class="nav-link lien-header"> <i
-                                class="bi bi-bank bi d-block mx-auto mb-1 fs-2 text-center" width="24" height="24"
-                                aria-hidden="true">
-                                <use xlink:href="municipalite.html"></use>
+                                class="bi bi-bank bi d-block mx-auto mb-1 fs-2 text-center" aria-hidden="true">
                             </i>Municipalité</a>
                     </li>
                     <li class="nav-item">
                         <a href="https://www.ville.daveluyville.qc.ca/contact" class="nav-link lien-header"> <i
-                                class="bi bi-phone bi d-block mx-auto mb-1 fs-2 text-center" width="24" height="24"
-                                aria-hidden="true"></i>Nous joindre</a>
+                                class="bi bi-phone bi d-block mx-auto mb-1 fs-2 text-center" aria-hidden="true"></i>Nous
+                            joindre</a>
                     </li>
 
                     <li class="nav-item me-5 ">
@@ -76,32 +72,28 @@
                 <ul class="nav flex-column gap-3">
                     <li class="nav-item">
                         <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis" class="nav-link text-dark ">
-                            <i class="bi bi-tree-fill bi  mx-auto mb-1 fs-2 text-center " width="24" height="24"
-                                aria-hidden="true">
+                            <i class="bi bi-tree-fill bi  mx-auto mb-1 fs-2 text-center " aria-hidden="true">
 
 
                             </i>Socioculturelle</a>
                     </li>
                     <li class="nav-item">
                         <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis" class="nav-link text-dark ">
-                            <i class="bi bi-houses-fill bi  mx-auto mb-1 fs-2 text-center " width="24" height="24"
-                                aria-hidden="true">
+                            <i class="bi bi-houses-fill bi  mx-auto mb-1 fs-2 text-center " aria-hidden="true">
 
 
                             </i>Citoyens</a>
                     </li>
                     <li class="nav-item">
                         <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis" class="nav-link text-dark ">
-                            <i class="bi bi-bank bi  mx-auto mb-1 fs-2 text-center " width="24" height="24"
-                                aria-hidden="true">
+                            <i class="bi bi-bank bi  mx-auto mb-1 fs-2 text-center " aria-hidden="true">
 
 
                             </i>Municipalités</a>
                     </li>
                     <li class="nav-item">
                         <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis" class="nav-link text-dark ">
-                            <i class="bi bi-phone bi  mx-auto mb-1 fs-2 text-center " width="24" height="24"
-                                aria-hidden="true">
+                            <i class="bi bi-phone bi  mx-auto mb-1 fs-2 text-center " aria-hidden="true">
                             </i>Nous joindre</a>
                     </li>
                 </ul>
@@ -131,113 +123,117 @@
         <section class="  container-fluid mt-5">
             <h1 class="display-3 ms-5">Vivre ici!</h1>
             <h3 class="display-6 fst-italic ms-5 mt-4">Daveluyville se démarque ! </h3>
-            
 
 
 
-                    <!-- Section 3 -->
-                    <div class="container justify-content-between align-items-center mt-5 mb-5">
 
-                        <div class="row g-0 bg-body-loisirs position-relative">
-                            <div class="col-md-6 mb-md-0 p-md-4">
-                                <img src="Daveluyville-Images/centre_sportif_facade.jpeg.jpg" class="w-100" alt="...">
-                            </div>
-                            <div class="col-md-6 p-4 ps-md-0">
-                                <h5 class="mt-0">Centre Piché</h5>
-                                <p>Que ce soit pour des cours, des locations de salles, un abonnement au Centre de
-                                    conditionnement physique Beaudoin, la location de glace, tout peut désormais se
-                                    faire
-                                    sur la
-                                    plateforme ! Cliquez ici pour accéder à la plateforme.</p>
-                                <a href="#" class="stretched-link">En savoir plus</a>
+            <!-- Section 3 -->
+            <div class="container justify-content-between align-items-center mt-5 mb-5">
 
-                            </div>
+                <div class="row g-0 bg-body-loisirs position-relative">
+                    <div class="col-md-6 mb-md-0 p-md-4">
+                        <img src="Daveluyville-Images/centre_sportif_facade.jpeg.jpg" class="w-100"
+                            alt="centre-sportif-piché">
+                    </div>
+                    <div class="col-md-6 p-4 ps-md-0">
+                        <h5 class="mt-0">Centre Piché</h5>
+                        <p>Que ce soit pour des cours, des locations de salles, un abonnement au Centre de
+                            conditionnement physique Beaudoin, la location de glace, tout peut désormais se
+                            faire
+                            sur la
+                            plateforme ! Cliquez ici pour accéder à la plateforme.</p>
+                        <a href="#" class="stretched-link">En savoir plus</a>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="container justify-content-between align-items-center mt-5 mb-5">
+
+                <div class="row g-0 bg-body-loisirs position-relative">
+                    <div class="col-md-6 mb-md-0 p-md-4">
+                        <img src="Daveluyville-Images/Logo-école-secondaire.jpg" class="w-40" alt="logo-secondaire">
+                        <img src="Daveluyville-Images/logo-école.jpg" class="w-40" alt="logo-école-primaire">
+                    </div>
+                    <div class="col-md-6 p-4 ps-md-0">
+                        <h5 class="mt-0">CSBF- Nos écoles</h5>
+                        <p>Les services scolaires de Daveluyville offrent un environnement d’apprentissage
+                            chaleureux et structuré. L’école primaire propose un enseignement de qualité, un
+                            suivi
+                            attentif et des services complémentaires comme l’orthopédagogie, le soutien
+                            pédagogique
+                            et un service de garde dynamique. Les élèves profitent d’activités variées et
+                            d’une
+                            collaboration étroite entre l’école, les familles et la communauté, créant un
+                            milieu
+                            éducatif accueillant et engagé..</p>
+                        <div class=" d-flex flex-column gap-2">
+                            <a href="#" class="stretched-link">CSBF</a>
+                            <a href="#" class="stretched-link">École primaire Notre-Dame de l'assomption</a>
+                            <a href="#" class="stretched-link">École secondaire Sainte-Anne</a>
                         </div>
                     </div>
-
+                </div>
+                <div class="p-4 p-md-2 mb-4 rounded text-body-emphasis ">
                     <div class="container justify-content-between align-items-center mt-5 mb-5">
 
                         <div class="row g-0 bg-body-loisirs position-relative">
                             <div class="col-md-6 mb-md-0 p-md-4">
-                                <img src="Daveluyville-Images/Logo-école-secondaire.jpg" class="w-40" alt="...">
-                                <img src="Daveluyville-Images/logo-école.jpg" class="w-40" alt="">
+                                <img src="Daveluyville-Images/logo-lapetiteecole.png" class="w-75"
+                                    alt="cpe-lapetiteecole">
+
                             </div>
                             <div class="col-md-6 p-4 ps-md-0">
-                                <h5 class="mt-0">CSBF- Nos écoles</h5>
-                                <p>Les services scolaires de Daveluyville offrent un environnement d’apprentissage
-                                    chaleureux et structuré. L’école primaire propose un enseignement de qualité, un
-                                    suivi
-                                    attentif et des services complémentaires comme l’orthopédagogie, le soutien
-                                    pédagogique
-                                    et un service de garde dynamique. Les élèves profitent d’activités variées et
-                                    d’une
-                                    collaboration étroite entre l’école, les familles et la communauté, créant un
-                                    milieu
-                                    éducatif accueillant et engagé..</p>
+                                <h5 class="mt-0">Centre de la petite enfance</h5>
+                                <p>Le CPE de Daveluyville offre un milieu encadré, chaleureux et éducatif pour
+                                    les
+                                    tout-petits. Les milieux de garde en milieu familial complètent ce service
+                                    en
+                                    proposant un environnement intime, flexible et personnalisé. Ensemble, ils
+                                    assurent
+                                    aux familles des options de garde sécuritaires, stimulantes et adaptées à
+                                    leurs
+                                    besoins.</p>
                                 <div class=" d-flex flex-column gap-2">
-                                    <a href="#" class="stretched-link">CSBF</a>
-                                    <a href="#" class="stretched-link">École primaire Notre-Dame de l'assomption</a>
-                                    <a href="#" class="stretched-link">École secondaire Sainte-Anne</a>
+                                    <a href="#" class="stretched-link">La petite école</a>
+                                    <a href="#" class="stretched-link">Bottin Milieu familliale</a>
+                                    <a href="#" class="stretched-link">Bureau coordonateur</a>
                                 </div>
                             </div>
                         </div>
-                        <div class="p-4 p-md-2 mb-4 rounded text-body-emphasis "></div>
                         <div class="container justify-content-between align-items-center mt-5 mb-5">
 
                             <div class="row g-0 bg-body-loisirs position-relative">
                                 <div class="col-md-6 mb-md-0 p-md-4">
-                                    <img src="Daveluyville-Images/logo-lapetiteecole.png" class="w-75" alt="...">
+                                    <img src="Daveluyville-Images/logo-bibliotheque.jpg" class="w-50"
+                                        alt="bibliothèque">
 
                                 </div>
                                 <div class="col-md-6 p-4 ps-md-0">
-                                    <h5 class="mt-0">Centre de la petite enfance</h5>
-                                    <p>Le CPE de Daveluyville offre un milieu encadré, chaleureux et éducatif pour
-                                        les
-                                        tout-petits. Les milieux de garde en milieu familial complètent ce service
-                                        en
-                                        proposant un environnement intime, flexible et personnalisé. Ensemble, ils
-                                        assurent
-                                        aux familles des options de garde sécuritaires, stimulantes et adaptées à
-                                        leurs
-                                        besoins.</p>
+                                    <h5 class="mt-0">Bibliothèque municipale</h5>
+                                    <p>Grâce au bénévoles dévouées,la bibliothèque municipale de Daveluyville
+                                        offre
+                                        un
+                                        espace accueillant où petits
+                                        et grands peuvent découvrir une vaste sélection de livres, ressources
+                                        numériques
+                                        et activités culturelles. C’est un lieu vivant d’apprentissage, de
+                                        rencontres et
+                                        de créativité pour toute la communauté.</p>
                                     <div class=" d-flex flex-column gap-2">
-                                        <a href="#" class="stretched-link">La petite école</a>
-                                        <a href="#" class="stretched-link">Bottin Milieu familliale</a>
-                                        <a href="#" class="stretched-link">Bureau coordonateur</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="container justify-content-between align-items-center mt-5 mb-5">
-
-                                <div class="row g-0 bg-body-loisirs position-relative">
-                                    <div class="col-md-6 mb-md-0 p-md-4">
-                                        <img src="Daveluyville-Images/logo-bibliotheque.jpg" class="w-50" alt="...">
-
-                                    </div>
-                                    <div class="col-md-6 p-4 ps-md-0">
-                                        <h5 class="mt-0">Bibliothèque municipale</h5>
-                                        <p>Grâce au bénévoles dévouées,la bibliothèque municipale de Daveluyville
-                                            offre
-                                            un
-                                            espace accueillant où petits
-                                            et grands peuvent découvrir une vaste sélection de livres, ressources
-                                            numériques
-                                            et activités culturelles. C’est un lieu vivant d’apprentissage, de
-                                            rencontres et
-                                            de créativité pour toute la communauté.</p>
-                                        <div class=" d-flex flex-column gap-2">
-                                            <a href="#" class="stretched-link">En savoir plus</a>
-                                        </div>
+                                        <a href="#" class="stretched-link">En savoir plus</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
         </section>
     </main>
 
 
-    </div>
+
 
     <footer class="py-4 text-white">
         <div class="row m-4 text-white">
@@ -284,7 +280,7 @@
 
             <div class="col-md-5 offset-md-1 mb-3">
                 <div class="d-flex align-items-center gap-3 justify-content-start footer-logos">
-                    <a href="http://">
+                    <a href="https://mrcarthabaska.ca/services/amenagement-du-territoire/matrice-graphique">
                         <img class="img-fluid" src="Daveluyville-Images/MatriceMRC.jpg" alt=" accès Matrice MRC">
                     </a>
 
