--- a/loisirs.html
+++ b/loisirs.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <div class="border-bottom header-bg">
+        <div class="border-bottom bg-loisirs">
             <div class=" d-flex align-items-center py-3">
 
                 <a href="acceuil.html" class="me-auto">
@@ -40,7 +40,7 @@
                         <a href="municipalite.html" class="nav-link lien-header"> <i
                                 class="bi bi-bank bi d-block mx-auto mb-1 fs-2 text-center" width="24" height="24"
                                 aria-hidden="true">
-                                <use xlink:href="municipalite.html"></use>
+                               
                             </i>Municipalité</a>
                     </li>
                     <li class="nav-item">
@@ -139,10 +139,8 @@
                     Socioculturelle
                 </h1>
                 <p class="lead">
-                    Quickly design and customize responsive mobile-first sites with
-                    Bootstrap, the world’s most popular front-end open source toolkit,
-                    featuring Sass variables and mixins, responsive grid system,
-                    extensive prebuilt components, and powerful JavaScript plugins.
+                    Découvrez nos événements, nos infrastructures sportives modernes et l'esprit chaleureux du Carrefour
+                    des générations.
                 </p>
 
 
