validation w3c + wave page accueil

--- a/acceuil.html
+++ b/acceuil.html
@@ -25,13 +25,13 @@
                 <ul class="nav d-none d-lg-flex align-items-center gap-3">
                     <li class="nav-item">
                         <a href="loisirs.html" class="nav-link lien-header"> <i
-                                class="bi bi-tree-fill bi d-block mx-auto mb-1 fs-2 text-center " width="24" height="24"
+                                class="bi bi-tree-fill bi d-block mx-auto mb-1 fs-2 text-center " 
                                 aria-hidden="true">
                             </i>Socioculturelle</a>
                     </li>
                     <li class="nav-item">
                         <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis" class="nav-link lien-header">
-                            <i class="bi bi-houses-fill bi d-block mx-auto mb-1 fs-2 text-center" width="24" height="24"
+                            <i class="bi bi-houses-fill bi d-block mx-auto mb-1 fs-2 text-center" 
                                 aria-hidden="true">
 
                             </i>Citoyens</a>
@@ -45,14 +45,14 @@
                     </li>
                     <li class="nav-item">
                         <a href="https://www.ville.daveluyville.qc.ca/contact" class="nav-link lien-header"> <i
-                                class="bi bi-phone bi d-block mx-auto mb-1 fs-2 text-center" width="24" height="24"
+                                class="bi bi-phone bi d-block mx-auto mb-1 fs-2 text-center" 
                                 aria-hidden="true"></i>Nous joindre</a>
                     </li>
 
                     <li class="nav-item me-5 ">
                         <form class="d-flex gap-2">
                             <input type="search" class="form-control" aria-label="recherche" placeholder="Recherche…">
-                            <button class="btn btn-primary">Trouver</button>
+                            <button class="btn btn-primary">Recherche</button>
                         </form>
                     </li>
                 </ul>
@@ -69,14 +69,14 @@
         <div class="offcanvas offcanvas-end  h-50 " tabindex="-1" id="menuMobile">
             <div class="offcanvas-header">
                 <h5 class="offcanvas-title">Menu</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="bouton fermer"></button>
             </div>
 
             <div class="offcanvas-body">
                 <ul class="nav flex-column gap-3">
                     <li class="nav-item">
                         <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis" class="nav-link  ">
-                            <i class="bi bi-tree-fill bi  mx-auto mb-1 fs-2 text-center " width="24" height="24"
+                            <i class="bi bi-tree-fill bi  mx-auto mb-1 fs-2 text-center " 
                                 aria-hidden="true">
 
 
@@ -84,7 +84,7 @@
                     </li>
                     <li class="nav-item">
                         <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis" class="nav-link ">
-                            <i class="bi bi-houses-fill bi  mx-auto mb-1 fs-2 text-center " width="24" height="24"
+                            <i class="bi bi-houses-fill bi  mx-auto mb-1 fs-2 text-center "
                                 aria-hidden="true">
 
 
@@ -92,7 +92,7 @@
                     </li>
                     <li class="nav-item">
                         <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis" class="nav-link ">
-                            <i class="bi bi-bank bi  mx-auto mb-1 fs-2 text-center " width="24" height="24"
+                            <i class="bi bi-bank bi  mx-auto mb-1 fs-2 text-center " 
                                 aria-hidden="true">
 
 
@@ -100,7 +100,7 @@
                     </li>
                     <li class="nav-item">
                         <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis" class="nav-link ">
-                            <i class="bi bi-phone bi  mx-auto mb-1 fs-2 text-center " width="24" height="24"
+                            <i class="bi bi-phone bi  mx-auto mb-1 fs-2 text-center " 
                                 aria-hidden="true">
                             </i>Nous joindre</a>
                     </li>
@@ -141,14 +141,14 @@
                 <!-- Carousel #1-->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <h3 class="img-fluid w-100" src="Daveluyville-Images/hiver-davel.png" alt="Hiver-sapin-parc">
+                        <img class="img-fluid w-100" src="Daveluyville-Images/hiver-davel.png" alt="Hiver-sapin-parc">
                         <svg aria-hidden="true" class="bd-placeholder-img" height="100%"
                             preserveAspectRatio="xMidYMid slice" width="100%" xmlns="http://www.w3.org/2000/svg">
                             <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
                         </svg>
                         <div class="container">
                             <div class=" carousel-caption text-end">
-                                <h2 class="display-2">Infolettre</h1>
+                                <h2 class="display-2">Infolettre</h2>
                                     <p class="display-6">
                                         Inscrivez-vous à l'infolettre pour recevoir toutes les actualités de la ville.
                                     </p>
@@ -257,7 +257,6 @@
                             src="https://www.canva.com/design/DAG7Xr9mJtY/dr754-HAIvjl7LzVvZezIg/view?embed"
                             allowfullscreen="allowfullscreen" allow="fullscreen">
                         </iframe>
-
                         <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAG7Xr9mJtY&#x2F;dr754-HAIvjl7LzVvZezIg&#x2F;view?utm_content=DAG7Xr9mJtY&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link"
                             target="_blank" rel="noopener">CALENDRIER2025</a> par EG GE
 
@@ -278,31 +277,27 @@
                     <div class="col-12 col-md-6 col-lg-3 mb-4">
                         <iframe
                             src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Ffetedavel%2Fposts%2Fpfbid0Aa9AVQrnVxqBBEAUZdJXQkMVLDEGmWswm1t6Quv7Xg3Y92qPfZbtEgZK4a2HULjrl&show_text=true&width=500"
-                            width="300" height="374" style="border:none" scrolling="no" frameborder="0"
-                            allowfullscreen="true"
+                            width="300" height="374" style="border:none" 
                             allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                     </div>
                     <div class="col-12 col-md-6 col-lg-3 mb-4">
                         <iframe
                             src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Ffetedavel%2Fposts%2Fpfbid0vWZRfuEoqpLf8xNhLXVjCq89sZqYxF97MYReAFNJRh9kqXfBdQ8XScKyX8VvoFjMl&show_text=true&width=500"
-                            width="300" height="374" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-                            allowfullscreen="true"
+                            width="300" height="374" style="border:none;overflow:hidden"  
                             allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
 
                     </div>
                     <div class="col-12 col-md-6 col-lg-3 mb-4">
                         <iframe
                             src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FCentreSportifPiche%2Fposts%2Fpfbid02GrFHHtFEFdyKuZBpzNUWWokq6hDVKrris6froNcJFd7nn62N2gNmvXrsWXtdDv92l&show_text=true&width=500"
-                            width="300" height="374" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-                            allowfullscreen="true"
+                            width="300" height="374" style="border:none;overflow:hidden"  
                             allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                     </div>
 
                     <div class="col-12 col-md-6 col-lg-3 mb-4">
                         <iframe
                             src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FCentreSportifPiche%2Fposts%2Fpfbid02z5WdBVvTqKPVo4ARctdPdGRBtDLHnbw31n52eV8GQyZbgfT6b6xiN2kFGGHg4K1bl&show_text=true&width=500"
-                            width="300" height="374" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-                            allowfullscreen="true"
+                            width="300" height="374" style="border:none;overflow:hidden" 
                             allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                     </div>
                 </div>
