--- a/vivreici.html
+++ b/vivreici.html
@@ -47,14 +47,14 @@
 
                     <li class="nav-item me-5 ">
                         <form class="d-flex gap-2">
-                            <input type="search" class="form-control" placeholder="Recherche…">
+                            <input type="search" class="form-control" placeholder="Recherche…" aria-label="rechercher">
                             <button class="btn btn-primary">Trouver</button>
                         </form>
                     </li>
                 </ul>
                 <!--  BURGER  -->
                 <button class="d-lg-none btn text-white fs-3" type="button" data-bs-toggle="offcanvas"
-                    data-bs-target="#menuMobile" aria-controls="menuMobile"> <i class="bi bi-list"></i>
+                    data-bs-target="#menuMobile" aria-controls="menuMobile" aria-label="menuburger"><i class="bi bi-list"></i>
 
                 </button>
                 <!-- Logo -->
@@ -65,7 +65,7 @@
         <div class="offcanvas offcanvas-end  h-50 " tabindex="-1" id="menuMobile">
             <div class="offcanvas-header">
                 <h5 class="offcanvas-title">Menu</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="bouton fermer"></button>
             </div>
 
             <div class="offcanvas-body">
@@ -93,7 +93,7 @@
                     </li>
                     <li class="nav-item">
                         <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis" class="nav-link text-dark ">
-                            <i class="bi bi-phone bi  mx-auto mb-1 fs-2 text-center " aria-hidden="true">
+                            <i class="bi bi-phone bi mx-auto mb-1 fs-2 text-center " aria-hidden="true" aria-label="nous joindre">
                             </i>Nous joindre</a>
                     </li>
                 </ul>
@@ -122,7 +122,7 @@
 
         <section class="  container-fluid mt-5">
             <h1 class="display-3 ms-5">Vivre ici!</h1>
-            <h3 class="display-6 fst-italic ms-5 mt-4">Daveluyville se démarque ! </h3>
+            <h2 class="display-6 fst-italic ms-5 mt-4">Daveluyville se démarque ! </h2>
 
 
 
@@ -136,7 +136,7 @@
                             alt="centre-sportif-piché">
                     </div>
                     <div class="col-md-6 p-4 ps-md-0">
-                        <h5 class="mt-0">Centre Piché</h5>
+                        <h3 class="mt-0">Centre Piché</h3>
                         <p>Que ce soit pour des cours, des locations de salles, un abonnement au Centre de
                             conditionnement physique Beaudoin, la location de glace, tout peut désormais se
                             faire
@@ -156,7 +156,7 @@
                         <img src="Daveluyville-Images/logo-école.jpg" class="w-40" alt="logo-école-primaire">
                     </div>
                     <div class="col-md-6 p-4 ps-md-0">
-                        <h5 class="mt-0">CSBF- Nos écoles</h5>
+                        <h3 class="mt-0">CSBF- Nos écoles</h3>
                         <p>Les services scolaires de Daveluyville offrent un environnement d’apprentissage
                             chaleureux et structuré. L’école primaire propose un enseignement de qualité, un
                             suivi
@@ -184,7 +184,7 @@
 
                             </div>
                             <div class="col-md-6 p-4 ps-md-0">
-                                <h5 class="mt-0">Centre de la petite enfance</h5>
+                                <h3 class="mt-0">Centre de la petite enfance</h3>
                                 <p>Le CPE de Daveluyville offre un milieu encadré, chaleureux et éducatif pour
                                     les
                                     tout-petits. Les milieux de garde en milieu familial complètent ce service
@@ -210,7 +210,7 @@
 
                                 </div>
                                 <div class="col-md-6 p-4 ps-md-0">
-                                    <h5 class="mt-0">Bibliothèque municipale</h5>
+                                    <h3 class="mt-0">Bibliothèque municipale</h3>
                                     <p>Grâce au bénévoles dévouées,la bibliothèque municipale de Daveluyville
                                         offre
                                         un
